atualização cash controller